ibc-solana/packages/solana-ibc-macros/tests/ui/recv_packet_returns_string.stderr
error: Callback 'on_recv_packet' must return 'Result<Vec<u8>>', found '-> Result < String >'
 --> tests/ui/recv_packet_returns_string.rs:5:59
  |
5 |     pub fn on_recv_packet(ctx: Ctx, msg: OnRecvPacketMsg) -> Result<String> {
  |                                                           ^^^^^^^^^^^^^^^^^
